--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@kriszu/ki",
-  "type": "module",
+  "name": "@kriszu/wi",
   "version": "0.0.1",
+  "packageManager": "pnpm@8.0.0",
+  "description": "Use the right package manager",
   "author": "Kriszu <wangsizhu0504@outlook.com>",
   "license": "MIT",
   "homepage": "https://github.com/wangsizhu0504/ki#readme",
@@ -25,22 +26,21 @@
       "import": "./dist/index.mjs"
     }
   },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "wi": "bin/wi.mjs",
+    "wr": "bin/wr.mjs",
+    "wu": "bin/wu.mjs",
+    "wun": "bin/wun.mjs"
   },
   "files": [
-    "dist"
+    "dist",
+    "bin"
   ],
   "scripts": {
-    "dev": "unbuild --stub",
+    "dev": "npm run build & npm link",
     "build": "pnpm run clean && pnpm run compile",
     "clean": "rimraf ./dist",
     "compile": "unbuild",
@@ -48,24 +48,27 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "lodash-es": "^4.17.21",
-    "qs": "^6.11.1"
+    "typecheck": "tsc --noEmit",
+    "prepublish:cli": "npm run build"
   },
   "devDependencies": {
     "@kriszu/eslint-config": "^1.0.11",
-    "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.4",
-    "@types/qs": "^6.9.7",
+    "@types/ini": "^1.3.31",
+    "@types/node": "^17.0.45",
+    "@types/prompts": "^2.4.4",
     "bumpp": "^9.1.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "esno": "^0.16.3",
+    "execa": "^6.1.0",
+    "fast-glob": "^3.2.12",
+    "find-up": "^6.3.0",
+    "ini": "^3.0.1",
+    "prompts": "^2.4.2",
     "rimraf": "^5.0.0",
+    "terminal-link": "^3.0.0",
     "unbuild": "^1.2.1",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "which": "^2.0.2"
   }
 }
