refactor: change ni

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
-    "lib": ["DOM", "ESNext"],
+    "lib": ["ESNext"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "strict": true,
