--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "@kriszu/wi",
-  "version": "0.0.2",
+  "name": "@kriszu/ni",
+  "version": "0.0.3",
   "packageManager": "pnpm@8.0.0",
   "description": "Use the right package manager",
   "author": "Kriszu <wangsizhu0504@outlook.com>",
   "license": "MIT",
-  "homepage": "https://github.com/wangsizhu0504/ki#readme",
+  "homepage": "https://github.com/wangsizhu0504/ni#readme",
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wangsizhu0504/ki.git"
-  },
-  "bugs": "https://github.com/wangsizhu0504/ki/issues",
   "keywords": [
     "cli",
     "kriszu"
@@ -30,10 +25,10 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "bin": {
-    "wi": "bin/wi.mjs",
-    "wr": "bin/wr.mjs",
-    "wu": "bin/wu.mjs",
-    "wun": "bin/wun.mjs"
+    "ni": "bin/ni.mjs",
+    "nr": "bin/nr.mjs",
+    "nu": "bin/nu.mjs",
+    "nun": "bin/nun.mjs"
   },
   "files": [
     "dist",
@@ -54,21 +49,26 @@
   },
   "devDependencies": {
     "@kriszu/eslint-config": "^1.0.11",
+    "@posva/prompts": "^2.4.4",
+    "@types/fs-extra": "^11.0.1",
     "@types/ini": "^1.3.31",
-    "@types/node": "^17.0.45",
-    "@types/prompts": "^2.4.4",
-    "bumpp": "^9.1.0",
-    "eslint": "^8.40.0",
+    "@types/node": "^18.16.16",
+    "@types/which": "^3.0.0",
+    "bumpp": "^9.1.1",
+    "eslint": "^8.42.0",
     "esno": "^0.16.3",
-    "execa": "^6.1.0",
+    "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
     "find-up": "^6.3.0",
-    "ini": "^3.0.1",
-    "prompts": "^2.4.2",
-    "rimraf": "^5.0.0",
+    "fs-extra": "^11.1.1",
+    "fzf": "^0.5.2",
+    "ini": "^4.1.1",
+    "kleur": "^4.1.5",
+    "rimraf": "^5.0.1",
     "terminal-link": "^3.0.0",
+    "typescript": "^5.1.3",
     "unbuild": "^1.2.1",
-    "vitest": "^0.30.1",
-    "which": "^2.0.2"
+    "vitest": "^0.32.0",
+    "which": "^3.0.1"
   }
 }
