--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "packageManager": "pnpm@8.6.1",
   "description": "Use the right package manager",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
